--- a/index.css
+++ b/index.css
@@ -1,3 +1,133 @@
-#heading {
-  color: red;
+*,
+*::before,
+*::after {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Roboto", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+}
+
+.app {
+  display: block;
+  margin: 0 auto;
+}
+
+.header {
+  margin: 5px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  padding: 0 20px;
+  border: 1px solid black;
+  align-items: center;
+}
+
+.logo {
+  width: 100px;
+  cursor: pointer;
+}
+
+.nav-items > ul {
+  font-size: 24px;
+  display: flex;
+  list-style-type: none;
+}
+
+.nav-items > ul > li {
+  cursor: pointer;
+  padding: 10px;
+  margin: 10px;
+}
+
+.search-container {
+  display: flex;
+  justify-content: center;
+  margin: 50px 0;
+  gap: 10px;
+}
+
+.search-container input {
+  min-width: 250px;
+  padding: 10px;
+}
+
+.search-container input:focus {
+  outline: 0;
+}
+
+.search-container button {
+  padding: 10px 15px;
+  cursor: pointer;
+}
+
+.filter-btn {
+  margin: 10px 10px 10px 50px;
+  cursor: pointer;
+  padding: 4px 10px 
+  
+}
+
+.res-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  gap: 10px;
+  margin: 0 20px;
+}
+
+.res-card {
+  width: 200px;
+  /* height: 300px; */
+  padding: 10px;
+  /* padding-bottom: 20px; */
+  border: 1px solid transparent;
+}
+
+.res-card:hover {
+  border: 1px solid black;
+  transition: 0.3s ease-in-out;
+  cursor: pointer;
+}
+
+.search {
+  padding: 10px;
+}
+
+.res-logo {
+  width: 100%;
+  height: 180px;
+}
+
+.footer {
+  margin: 5px;
+  padding: 20px 10px;
+  border: 1px solid black;
+  margin-top: 50px;
+  margin-bottom: 20px;
+  text-align: center;
+}
+
+.shimmer-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  gap: 10px;
+  margin: 0 20px;
+}
+
+.shimmer-cards {
+  padding: 10px;
+  height: 370px;
+  width: 200px;
+  background-color: #f0f0f0;
+  /* padding-bottom: 20px; */
+  border: 1px solid transparent;
+}
+
+.login {
+  font-size: large;
+  width: 80px;
+  cursor: pointer;
 }
